--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
             <h2>Contact Us: </h2>
             <table>
                 <tr>
-                    <td>whatsapp: </td>
+                    <td>Whatsapp: </td>
                     <td>
                         <a href="#">
-                            <img src="image/Whatsapp.png">
+                            <img src="image/whatsapp.png">
                             0123456789
                         </a>
                     </td>
